[package]
name = "real_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
gd32vf103xx-hal = "0.5.0"
heapless = "0.7.16"
longan-nano = {version = "0.3.0", features = ["lcd"]}
nb = "1.0.0"
panic-halt = "0.2.0"
riscv = "0.9.0"
riscv-rt = "0.9.0"
# st7735-lcd = "0.8.1"
